hphp/test/zend/bad/ext/spl/tests/bug60577.php
<?php
$it = new EmptyIterator;
var_dump(count($it));